# cgbn-opencl

./: .gitignore  CMakeLists.txt  README.md  cgbn_stage1.cu
cgbn/backends/opencl/: README.md  cgbn_opencl.h  impl_opencl.cpp
cgbn/backends/opencl/kernels/: addsub.cl  base.cl  mont.cl
include/: cl_probe.h
src/: cl_probe.cpp  cuda_addsub_tests.cpp  main.cpp  opencl_addsub_tests.cpp  opencl_addsub_tests.h  opencl_low_risk_tests.cpp  opencl_low_risk_tests.h  opencl_mont_tests.cpp
test/: Makefile  bench  bench256  bench512  bench_cgbn_2048.cu  bench_cgbn_2048.h  cgbn_stage1.cu  main.cpp
